# stream-shift

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  kafka.rs  lib.rs  main.rs  rendering.rs
