[package]
name = "stream-shift"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stream-shift-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "stream-shift"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
tabled = "0.14.0"
futures = "0.3.28"
tokio = "1.33.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
